fix: docs ol alignment

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -68,8 +68,10 @@ ol {
 }
 
 ol ol {
-    padding: 4px 0 4px 20px;
+    padding: 4px 0 4px 27px;
     margin-bottom: 12px;
+    left: -14px;
+    position: relative;
 }
 
 ol::after {
